--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'English literature -- 19th century'
 - !lcc 'PR'
 - !lcsh 'Fiction'
+- GITenberg
 tableOfContents: Prince Otto -- The wrong box.
 title: The Works of Robert Louis Stevenson - Swanston Edition, Vol. 7
 url: http://www.gutenberg.org/ebooks/30807
